# msteams_webhooks

./: .gitignore  404.html  README.md  dev-requirements.txt  extra.css  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: test_suite.yml  unit_tests.yml
advanced/: index.html
building_cards/: index.html
docs/: advanced.md  building_cards.md  contributing.md  index.md
docs/reference/: actions.md  buttons.md  cards.md  containers.md  elements.md  teams_webhook.md
msteams_webhooks/: __init__.py  __version__.py  actions.py  base.py  buttons.py  cards.py  containers.py  elements.py  exceptions.py  types.py
reference/actions/: index.html
reference/buttons/: index.html
reference/cards/: index.html
reference/containers/: index.html
reference/elements/: index.html
reference/teams_webhook/: index.html
search/: search_index.json
tests/: test_actions.py  test_buttons.py  test_cards.py  test_containers.py  test_elements.py
