[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msteams_webhooks"
description = "A modern Python API for sending messages to Microsoft Teams using webhooks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Austin de Coup-Crank", email = "austindcc@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.24.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/decoupca/msteams_webhooks"
Source = "https://github.com/decoupca/msteams_webhooks"

[tool.hatch.version]
path = "msteams_webhooks/__version__.py"

[tool.isort]
profile = "black"

[tool.black]
line_length = 100