[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msteams_webhooks"
description = "A modern Python API for sending messages to Microsoft Teams using webhooks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Austin de Coup-Crank", email = "austindcc@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.24.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/decoupca/msteams_webhooks"
Source = "https://github.com/decoupca/msteams_webhooks"

[tool.hatch.version]
path = "msteams_webhooks/__version__.py"

[tool.black]
line_length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = [
    'A',    # flake8-builtins
    'ANN',   # flake8-annotations
    'B',    # flake8-bugbear
    'COM',  # flake8-commas
    'D',    # pydocstyle
    'E',    # pycodestyle
    'ERA',  # eradicate
    'F',    # pyflakes
    'FBT',  # flake8-boolean-trap
    'I',    # isort
    'ISC',  # flake8-implicit-str-concat
    'N',    # pep8-naming
    'PIE',  # flake8-pie
    'PT',   # flake8-pytest-style
    'S',    # flake8-bandit
    'Q',    # flake8-quotes
    'RET',  # flake8-return
    'RUF',  # ruff
    'SIM',  # flake8-simplify
    'T20',  # flake8-print
    'UP',   # pyupgrade
]
ignore = [
    'ANN101',    # Missing type annotation for self
]

[tool.ruff.pydocstyle]
convention = "google"